# reply_classfication_api

./: Dockerfile  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
reply_insta_classifier/: data_models.py  dummy_model.py  main.py
tests/: test_reply_insta_classifier.py
