[tool.poetry]
name = "reply-insta-classifier"
version = "0.1.0"
description = ""
authors = ["Nico Braun <nico.braun@pexon-consulting.de>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.0"
transformers = {extras = ["torch"], version = "^4.23.1"}
uvicorn = "^0.18.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
